--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "rtconner/laravel-tagging": "~2.2",
         "laravelcollective/html": "^5.3.0",
 	  	"watson/bootstrap-form": "1.1.*",
-        "spatie/laravel-permission": "^1.0"
+        "spatie/laravel-permission": "^1.0",
+        "laravel/scout": "^3.0",
+        "algolia/algoliasearch-client-php": "^1.25"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
