--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "laravel-elixir-webpack-official": "^1.0.10"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue-axios": "^2.0.2"
+    "laravel-elixir-vueify": "^1.0.6",
+    "lodash": "^4.17.5",
+    "lodash.debounce": "^4.0.8",
+    "vue": "^2.5.16",
+    "vue-axios": "^2.0.2",
+    "vue-resource": "^1.5.0",
+    "vuedraggable": "^2.16.0"
   }
 }
