--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-sass": "3.0.0",
     "laravel-elixir": "^5.0.0",
     "laravel-elixir-webpack-official": "^1.0.10"
   },
