--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,11 @@
         "thomaswelton/laravel-gravatar": "~1.0",
         "rtconner/laravel-tagging": "~2.2",
         "laravelcollective/html": "^5.3.0",
-	  	"watson/bootstrap-form": "1.1.*",
+  	"watson/bootstrap-form": "1.1.*",
         "spatie/laravel-permission": "^1.0",
         "laravel/scout": "^3.0",
-        "algolia/algoliasearch-client-php": "^1.25"
+        "algolia/algoliasearch-client-php": "^1.25",
+	"maatwebsite/excel": "~2.1.0"	
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
